# webinars

./: .gitignore  orientation.org
markov/: markov.ipynb  pyproject.toml
markov/tests/: test_markov.py
