[tool.poetry]
name = "markov"
version = "0.1.0"
description = ""
authors = ["willian paiva <willian@vervalem.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^0.35.4"
jupyterlab-discovery = "^5.1"
pandas = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
